# simplex-client

./: .env.example  .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml
.beads/: metadata.json
.beads/embeddeddolt/simplex_client/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
examples/: echo_bot.py
src/simplex_client/: __init__.py  client.py  commands.py  events.py  exceptions.py  types.py
tests/: conftest.py  docker-compose.yml  test_client.py  test_commands.py  test_events.py  test_integration.py  test_types.py
tests/simplex/: Dockerfile  entrypoint.sh  init-profile.sh
