[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplex-client"
version = "0.1.0"
description = "Typed async Python client for the SimpleX Chat CLI WebSocket API"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "simplex-client contributors" }]
dependencies = [
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-docker>=3.0",
    "requests>=2.31",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests requiring Docker",
]

[tool.hatch.build.targets.wheel]
packages = ["src/simplex_client"]
